--- a/host_vars/catafalco/vars.yml
+++ b/host_vars/catafalco/vars.yml
@@ -96,6 +96,7 @@ enable_containers: true
 # Active containers
 #
 containers:
+  - actual_budget
   - arm
   - calibreweb
   - dawarich
@@ -281,25 +282,7 @@ snapraid_runner_smtp_host: "{{ email_smtp_host }}"
 snapraid_runner_smtp_port: "{{ email_smtp_port }}"
 
 snapraid_runner_healthchecks_io_uuid: 92955207-2df3-4978-a1c6-4dcde12190e1
-snapraid_healthchecks_io_host: https://healthchecks.{{ host_local }}
-
-snapraid_runner_command: >
-  python3 {{ snapraid_runner_bin }} -c {{ snapraid_runner_conf }} {% if snapraid_runner_healthchecks_io_uuid %}&& curl -fsS -m 10 --retry 5 -o /dev/null
-  {{ snapraid_healthchecks_io_host }}/ping/{{ snapraid_runner_healthchecks_io_uuid }}{% endif %}
-
-# Stop all the docker containers, backup the {{ docker_dir }} to the MergerFS pool, execute the SnapRAID runner and start the containers back up
-# Stopping the containers is necessary – backing up the data folder with the containers running will result in corrupted database files and no files can be
-# changed during the SnapRAID sync
-snapraid_runner_cron_jobs:
-  - job: >
-      "docker stop $(docker ps -q);
-      rsync -avz --delete {{ docker_dir }}/* {{ mergerfs_root }}/docker-volumes-backup;
-      docker start $(docker ps -a -q) &&
-      {{ snapraid_runner_command }} "
-    name: snapraid_runner
-    weekday: "0"
-    hour: "7"
-    minute: "0"
+snapraid_healthchecks_io_host: "{{ healthchecks_dashboard_url }}"
 
 snapraid_runner_delete_threshold: -1
 
