--- a/roles/snapraid/tasks/configure_snapraid-btrfs-runner.yml
+++ b/roles/snapraid/tasks/configure_snapraid-btrfs-runner.yml
@@ -4,13 +4,22 @@
     repo: https://github.com/fmoledina/snapraid-btrfs-runner.git
     dest: "{{ snapraid_snapraid_btfs_runner_dir }}"
     update: true
+    force: true
 
 - name: Copy and configure snapraid-btrfs-runner.conf
   ansible.builtin.template:
-    src: snapraid-btrfs-runner.j2
+    src: snapraid-btrfs-runner.conf.j2
     dest: "{{ snapraid_snapraid_btfs_runner_dir }}/snapraid-btrfs-runner.conf"
     owner: root
     group: root
+    mode: "0644"
+
+- name: Copy the updated runner, which includes Healthchecks logic
+  ansible.builtin.copy:
+    dest: "{{ snapraid_snapraid_btfs_runner_dir }}/snapraid-btrfs-runner.py"
+    src: snapraid-btrfs-runner.py
+    owner: "{{ username }}"
+    group: "{{ username }}"
     mode: "0644"
 
 - name: Create logging directory in case it's missing
@@ -31,8 +40,7 @@
       [Service]
       Type=oneshot
       ExecStart=/usr/bin/python3 {{ snapraid_snapraid_btfs_runner_dir }}/snapraid-btrfs-runner.py \
-        -c {{ snapraid_snapraid_btfs_runner_dir }}/snapraid-btrfs-runner.conf {% if snapraid_runner_healthchecks_io_uuid %}\
-        && curl -fsS -m 10 --retry 5 -o /dev/null {{ snapraid_healthchecks_io_host }}/ping/{{ snapraid_runner_healthchecks_io_uuid }}{% endif %}
+        -c {{ snapraid_snapraid_btfs_runner_dir }}/snapraid-btrfs-runner.conf
     owner: root
     group: root
     mode: "0644"
