--- a/roles/telegraf/files/telegraf.conf
+++ b/roles/telegraf/files/telegraf.conf
@@ -81,16 +81,16 @@
   ## Multiple URLs can be specified for a single cluster, only ONE of the
   ## urls will be written to each interval.
   ##   ex: urls = ["https://us-west-2-1.aws.cloud2.influxdata.com"]
-  urls = ["$INFLUX_URL"]
+  urls = ["${INFLUX_URL}"]
 
   ## Token for authentication.
-  token = "$INFLUX_TOKEN"
+  token = "${INFLUX_TOKEN}"
 
   ## Organization is the name of the organization you wish to write to; must exist.
-  organization = "$INFLUX_ORG"
+  organization = "${INFLUX_ORG}"
 
   ## Destination bucket to write into.
-  bucket = "$INFLUX_BUCKET"
+  bucket = "${INFLUX_BUCKET}"
 
   ## The value of this tag will be used to determine the bucket.  If this
   ## tag is not set the 'bucket' option is used as the default.
