feat: minor fixes. Added custom 4xx and 5xx pages.

--- a/host_vars/nilde/vars.yml
+++ b/host_vars/nilde/vars.yml
@@ -5,7 +5,7 @@ ntp_timezone: "{{ timezone }}"
 locale: en_US.UTF-8
 
 username: funkysloth
-guid: "1001"
+guid: "1000"
 shell: /usr/bin/zsh
 security_ssh_port: 69
 
@@ -15,13 +15,25 @@ email: "{{ email_login }}@{{ email_smtp_host }}"
 email_smtp_port: 465
 email_smtp_port_startls: 587
 
+colorscheme: nord
+
+# Packages
+extra_packages:
+  - git
+  - neovim
+  - ncdu
+  - python3-pip
+  - ranger
+  - rsync
+  - tmux
+  - zsh
+
 enable_containers: true
 docker_dir: /var/opt/docker
 containers:
   - authelia
-  - nextcloud
-  - onlyoffice
   - seafile
+  - onlyoffice
 
 site_url: catafal.co
 
