--- a/roles/jellyfin/tasks/main.yml
+++ b/roles/jellyfin/tasks/main.yml
@@ -82,3 +82,13 @@
     path: "{{ docker_dir }}/{{ jellyfin_container_name }}/system.xml"
     search_string: "  <EnableMetrics>false</EnableMetrics>"
     line: "  <EnableMetrics>true</EnableMetrics>"
+
+- name: Setup backup cron job
+  ansible.builtin.include_tasks: tasks/backup_service.yml
+  vars:
+    service_name: "{{ jellyfin_container_name }}"
+    cron_schedule: "0 5 * * *"
+    backup_cli_args:
+      source_paths: "{{ docker_dir }}/{{ jellyfin_container_name }}"
+      destination_path: "{{ mergerfs_root }}/docker-volumes-backup"
+      container_names_str: "{{ jellyfin_container_name }}"
