--- a/roles/deluge/tasks/main.yml
+++ b/roles/deluge/tasks/main.yml
@@ -72,3 +72,13 @@
     owner: "{{ guid }}"
     group: "{{ guid }}"
     mode: "0644"
+
+- name: Setup backup cron job
+  ansible.builtin.include_tasks: tasks/backup_service.yml
+  vars:
+    service_name: "{{ deluge_container_name }}"
+    cron_schedule: "0 5 * * 3"
+    backup_cli_args:
+      source_paths: "{{ docker_dir }}/{{ deluge_container_name }}"
+      destination_path: "{{ mergerfs_root }}/docker-volumes-backup"
+      container_names_str: "{{ deluge_container_name }}"
