--- a/roles/slskd/tasks/main.yml
+++ b/roles/slskd/tasks/main.yml
@@ -20,7 +20,7 @@
     file: network.yml
 
 - name: Make sure that slskd container is created and running
-  docker_container:
+  ansible.builtin.docker_container:
     name: "{{ slskd_container_name }}"
     image: slskd/slskd:latest
     pull: true
@@ -63,3 +63,13 @@
     owner: "{{ guid }}"
     group: "{{ guid }}"
     mode: "0644"
+
+- name: Setup backup cron job
+  ansible.builtin.include_tasks: tasks/backup_service.yml
+  vars:
+    service_name: "{{ slskd_container_name }}"
+    cron_schedule: "0 5 * * *"
+    backup_cli_args:
+      source_paths: "{{ docker_dir }}/{{ slskd_container_name }}"
+      destination_path: "{{ mergerfs_root }}/docker-volumes-backup"
+      container_names_str: "{{ slskd_container_name }}"
