--- a/roles/handbrake/tasks/main.yml
+++ b/roles/handbrake/tasks/main.yml
@@ -42,3 +42,13 @@
     owner: "{{ guid }}"
     group: "{{ guid }}"
     mode: "0644"
+
+- name: Setup backup cron job
+  ansible.builtin.include_tasks: tasks/backup_service.yml
+  vars:
+    service_name: "{{ handbrake_container_name }}"
+    cron_schedule: "0 5 4 * *"
+    backup_cli_args:
+      source_paths: "{{ docker_dir }}/{{ handbrake_container_name }}"
+      destination_path: "{{ mergerfs_root }}/docker-volumes-backup"
+      container_names_str: "{{ handbrake_container_name }}"
