--- a/roles/healthchecks/tasks/main.yml
+++ b/roles/healthchecks/tasks/main.yml
@@ -50,3 +50,13 @@
     owner: "{{ guid }}"
     group: "{{ guid }}"
     mode: "0644"
+
+- name: Setup backup cron job
+  ansible.builtin.include_tasks: tasks/backup_service.yml
+  vars:
+    service_name: "{{ healthchecks_container_name }}"
+    cron_schedule: "0 4 * * *"
+    backup_cli_args:
+      source_paths: "{{ docker_dir }}/{{ healthchecks_container_name }}"
+      destination_path: "{{ mergerfs_root }}/docker-volumes-backup"
+      container_names_str: "{{ healthchecks_container_name }}"
