--- a/roles/homer/tasks/docker.yml
+++ b/roles/homer/tasks/docker.yml
@@ -14,7 +14,7 @@
 # https://github.com/bastienwirtz/homer
 - name: Make sure that Homer container is created and running
   community.docker.docker_container:
-    name: homer
+    name: "{{ homer_container_name }}"
     image: b4bz/homer:latest
     pull: true
     networks:
@@ -36,3 +36,13 @@
     owner: "{{ guid }}"
     group: "{{ guid }}"
     mode: "0644"
+
+- name: Setup backup cron job
+  ansible.builtin.include_tasks: tasks/backup_service.yml
+  vars:
+    service_name: "{{ homer_container_name }}"
+    cron_schedule: "0 5 * * *"
+    backup_cli_args:
+      source_paths: "{{ docker_dir }}/{{ homer_container_name }}"
+      destination_path: "{{ mergerfs_root }}/docker-volumes-backup"
+      container_names_str: "{{ homer_container_name }}"
