--- a/roles/dawarich/tasks/main.yml
+++ b/roles/dawarich/tasks/main.yml
@@ -7,6 +7,7 @@
       - watched
       - db_data_pg_17
       - storage
+      - redis_data
 
 - name: Create the necessary Dawarich folder
   ansible.builtin.file:
