--- a/roles/invidious/tasks/main.yml
+++ b/roles/invidious/tasks/main.yml
@@ -56,8 +56,28 @@
       SERVER_BASE_URL: "{{ invidious_dashboard_url }}"
     networks:
       - name: "{{ invidious_network_name }}"
+    expose:
+      - "127.0.0.1:8282:8282"
     state: started
     restart_policy: unless-stopped
+
+# - name: Make sure that Invidious sig_helper is created and running
+#   community.docker.docker_container:
+#     name: inv_sig_helper
+#     image: quay.io/invidious/inv-sig-helper:latest
+#     init: true
+#     command: ["--tcp", "0.0.0.0:12999"]
+#     env:
+#       RUST_LOG: info
+#     networks:
+#       - name: "{{ invidious_network_name }}"
+#     restart_policy: unless-stopped
+#     cap_drop:
+#       - all
+#     read_only: true
+#     state: started
+#     security_opts:
+#       - no-new-privileges:true
 
 - name: Make sure that Invidious container is created and running
   community.docker.docker_container:
@@ -74,16 +94,16 @@
           port: 5432
         check_tables: true
         invidious_companion:
-          - private_url: "http://{{ invidious_container_name }}-companion:8282"
-            public_url: "{{ invidious_dashboard_url }}"
-        visitor_data: {{ invidious_visitor_data }}
-        po_token: {{ invidious_po_token }}
+        - private_url: "http://{{ invidious_container_name }}-companion:8282"
+          public_url: "{{ invidious_dashboard_url }}"
+        invidious_companion_key: {{ invidious_companion_key }}
+        # visitor_data: {{ invidious_visitor_data }}
+        # po_token: {{ invidious_po_token }}
         https_only: true
         domain: "invidious.{{ host_local }}"
         external_port: 443
         use_pubsub_feeds: true
         statistics_enabled: false
-        invidious_companion_key: {{ invidious_companion_key }}
         hmac_key: {{ invidious_hmac }}
     networks:
       - name: "{{ invidious_network_name }}"
@@ -98,7 +118,7 @@
       retries: 2
     log_driver: json-file
     log_options:
-      max-size: 1G
+      max-size: 10M
       max-file: "4"
     labels:
       swag.uptime-kuma.enabled: "true"
