--- a/roles/jellyfin/tasks/main.yml
+++ b/roles/jellyfin/tasks/main.yml
@@ -29,7 +29,7 @@
 - name: Make sure that Jellyfin container is created and running
   docker_container:
     name: "{{ jellyfin_container_name }}"
-    image: ghcr.io/linuxserver/jellyfin:latest
+    image: ghcr.io/linuxserver/jellyfin:10.10.7
     pull: true
     networks:
       - name: "{{ jellyfin_network_name }}"
@@ -41,7 +41,13 @@
       - /dev/dri/renderD128:/dev/dri/renderD128
     state: started
     healthcheck:
-      "test": ["CMD", "curl", "--fail", "http://{{ jellyfin_container_name }}:8096/health"]
+      "test":
+        [
+          "CMD",
+          "curl",
+          "--fail",
+          "http://{{ jellyfin_container_name }}:8096/health",
+        ]
       interval: 5m
       retries: 3
       start_period: 30s
